--- a/skills.html
+++ b/skills.html
@@ -55,7 +55,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>Is this change accounted online?</p>
+                        <p>Is this change accounted online?2.0</p>
                     </div>
                 </div>
             </div>
