--- a/skills.html
+++ b/skills.html
@@ -55,7 +55,20 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>Is this change accounted online?2.0</p>
+                        <p>Bilingual: I speak both English and Spanish.</p>
+                        <p>Leadership: I am a team captain for the BYU Football team (2024).</p>
+                        <p>Web Devolopment: I developed this very website and have acquired various skills relating to web development and information systems including the following:
+                            <ul>
+                                <li>Database desing development</li>
+                                <li>Entity-Relationship diagramming</li>    
+                                <li>Structured Query Language</li>
+                                <li>Tableau</li>
+                                <li>Excel Solver, Pivot Tables and charts</li>
+                                <li>HTML, CSS, Boostrap</li>
+                                <li>Flow Chart diagramming</li>
+                                <li>VBA programming in Excel</li>
+                            </ul>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -67,31 +80,23 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <ul class="list-inline text-center">
                             <li class="list-inline-item">
-                                <a href="#!">
+                                <a href="https://www.instagram.com/talf_25/">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                                        <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
                                     </span>
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#!">
+                                <a href="https://www.linkedin.com/in/talan-alfrey-238166157/">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#!">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                                        <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
                                     </span>
                                 </a>
                             </li>
                         </ul>
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2023</div>
+                        <div class="small text-center text-muted fst-italic">Copyright &copy; Talan Alfrey 2024</div>
                     </div>
                 </div>
             </div>
