--- a/experience.html
+++ b/experience.html
@@ -69,6 +69,11 @@
                                 <li>I built relationships with local organizations to enhance their parties and events with the rental of the 360 booth</li>
 
                             </ul>
+                            <li>D1 Devolopment</li>
+                            <ul>
+                                <li>I have coached and developed the skills and talents of young football players with dreams of playing college football</li>
+                                <li>I have also organized and scheduled the training plan to best help the kids succeed</li>
+                            </ul>
                         </ol>
                     </div>
                 </div>
@@ -81,31 +86,23 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <ul class="list-inline text-center">
                             <li class="list-inline-item">
-                                <a href="#!">
+                                <a href="https://www.instagram.com/talf_25/">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                                        <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
                                     </span>
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#!">
+                                <a href="https://www.linkedin.com/in/talan-alfrey-238166157/">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#!">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                                        <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
                                     </span>
                                 </a>
                             </li>
                         </ul>
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2023</div>
+                        <div class="small text-center text-muted fst-italic">Copyright &copy; Talan Alfrey 2024</div>
                     </div>
                 </div>
             </div>
