--- a/skills.html
+++ b/skills.html
@@ -59,7 +59,7 @@
                         <p>Leadership: I am a team captain for the BYU Football team (2024).</p>
                         <p>Web Devolopment: I developed this very website and have acquired various skills relating to web development and information systems including the following:
                             <ul>
-                                <li>Database desing development</li>
+                                <li>Database design development</li>
                                 <li>Entity-Relationship diagramming</li>    
                                 <li>Structured Query Language</li>
                                 <li>Tableau</li>
