--- a/education.html
+++ b/education.html
@@ -62,7 +62,7 @@
                                     <li>Bachelor of Science in Exercise Science with a minor in Business</li>
                                     <li>Acadmic All-Big12 First Team</li>
                                     <li>Alston Award Winner</li>
-
+                                    <li>Full-ride Athletic Scholarship</li>
                                 </ul>
                             </li>
                         </ol>
